Bug 248376 - Unmarking packages for installation in preview screen doesn't stop them from being installed
Summary: Unmarking packages for installation in preview screen doesn't stop them from ...
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Applications
Component: libqapt (show other bugs)
Version: 0.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-19 14:51 UTC by Alvaro Manuel Recio Perez
Modified: 2010-08-19 15:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2010-08-19 14:51:22 UTC
Version:           0.2 (using KDE 4.5.0) 
OS:                Linux

When marking a package for installation, Muon also marks all its dependencies. Clicking on "Preview Changes" shows a list of all pending packages and the user may unmark them there, making them dissapear from the list. However, if the user confirm the changes by clicking "Apply Changes", the previously unmarked packages are installed anyway.

Reproducible: Always

Steps to Reproduce:
1. Mark for installation a package with dependencies.
2. Click "Preview Changes".
3. Unmark some packages.
4. Click "Apply Changes".

Actual Results:  
All the packages initially shown in the preview are installed.

Expected Results:  
Unmarked packages shouldn't be installed, possibly aborting the whole process if the dependencies were a requisite for the main package.

OS: Linux (x86_64) release 2.6.35-15-generic
Compiler: cc
Distribution: Kubuntu Maverick Alpha 3
Comment 1 Alvaro Manuel Recio Perez 2010-08-19 14:53:58 UTC
Sorry, the version of Muon was 0.5.0, not 0.2 as reported initially. Also, please note that I was using an Alpha version of Kubuntu Maverick.
Comment 2 Jonathan Thomas 2010-08-19 15:16:40 UTC
SVN commit 1165483 by jmthomas:

Fix unmarking a package's dependency not unmarking the dependant itself

BUG:248376


 M  +1 -0      MainTab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165483