Fix unmarking a package's dependency not unmarking the dependant itself

BUG:248376

svn path=/trunk/kdereview/muon/; revision=1165483